# circinus

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: test.yml
circinus/: __main__.py  agent.py  cli.py  components.py  fuzzer.py  knowledge_base.py  llm.py  logger.py  settings.py  utils.py  vector_store.py
notebook/: blob.js  blob.py  blob.webidl  blob_documentation.txt  conf.toml  webidl.ipynb
tests/: conftest.py  test_utils.py  test_vector_store.py
